--- a/styles/style.css
+++ b/styles/style.css
@@ -180,6 +180,7 @@ footer {
 .logo {
     width: 40px;
     height: auto;
+    transition: transform 0.5s ease;
 }
 
 /* === Параграфы === */
@@ -199,9 +200,7 @@ body.dark-theme footer {
     box-shadow: none;
 }
 
-body.dark-theme .Opisanie,
 body.dark-theme .description {
-    background-color: #333;
     color: #fff;
 }
 
@@ -220,6 +219,7 @@ body.dark-theme button {
 body.dark-theme .slider-wrapper img.arrow {
     background-color: rgba(255, 255, 255, 0.15);
 }
+
 #theme-toggle {
     position: fixed;
     top: 20px;
@@ -234,6 +234,11 @@ body.dark-theme .slider-wrapper img.arrow {
     cursor: pointer;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
+}
+body.dark-theme .Opisanie {
+    background: linear-gradient(135deg, #2a2a2a, #1f1f1f); /* тёмный градиент */
+    color: white;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
 }
 
 #theme-toggle:hover {
@@ -465,6 +470,9 @@ body.dark-theme .site-header {
     background: linear-gradient(135deg, #1e1e2e, #2a2a40); /* глубокий тёмный градиент */
     color: #f1f1f1;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+}
+.logo:hover {
+    transform: scale(1.2);
 }
 
 
